<resources>
    <string name="app_name">Xô Fome!</string>
    <string name="test">Nome produto</string>
    <string name="imagem_produto">Produto</string>
    <string name="imagem_menu_produto">Menu de opções para produto</string>
    <string name="imagem_button_pedido">Adicionar ao pedido</string>
    <string name="price"> 59.90</string>
    <string name="descriptionPrice"> Preço</string>
    <string name="title_activity_tela_lista_produtos">TelaListaProdutos</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hello_blank_fragment2">Fragment 2</string>
    <string name="hello_blank_fragment">Fragment 1</string>
    <string name="comidas">Comidas</string>
    <string name="bebidas">Bebidas</string>
    <string name="botaoAdicionar">Adicionar</string>
    <string name="cardapio">Cardápio</string>
    <string name="add_activity_name">Adicionar Produto</string>
    <string name="button_cadastrar">Sign up!</string>
    <string name="cadastrar_activity_name">Cadastre-se!</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_drawer"> Produtos </string>
    <string name="configs"> Configurações </string>
    <string name="alt_endereço"> Alterar Endereço </string>
    <string name="acompanhar_pedido"> Acompanhar Pedido </string>
    <string name="title_activity_cadastrar_endereco"> Cadastrar Endereço</string>
    <string name="header_cadastrar_endereco"> Dados do Endereço</string>
    <string name="rua"> Rua:</string>
    <string name="bairro"> Bairro:</string>
    <string name="numero"> Número:</string>
    <string name="complemento"> Complemento (Opicional):</string>
    <string name="ponto_ref"> Ponto de Referência (Opicional):</string>
    <string name="confirmar_menu_item"> Confirmar</string>
    <string name="descartar_menu_item"> Cancelar </string>
    <string name="header_editar_endereco"> Dados do Endereço</string>
    <string name="title_activity_editar_endereco"> Editar Endereço</string>
    <string name="editar_rua_stub"> Vila Velha</string>
    <string name="editar_bairro_stub"> Barra do Ceará</string>
    <string name="editar_numero_stub"> 193</string>
    <string name="editar_complemento_stub"> Apartamento </string>
    <string name="editar_pnt_ref_stub"> Próximo a Avenia Leste/Oeste </string>
    <string name="nome_fulano_de_tal"> Caio Flávio </string>
    <string name="email_fulano_de_tal"> caioflavio@gmail.com</string>
    <string name="selecionar_entrega"> Selecione o endereço de Entrega </string>
    <string name="radio_button_end_atual"> Rua Doutor Rui Maia, nº 625, Ap 106 - Centro </string>
    <string name="radio_button_end_cadastrado"> Rua Miguel Pereira, nº 297, Térreo - Centro</string>
    <string name="text_end_atual"> Endereço Atual: </string>
    <string name="text_end_cadastrado"> Endereço Cadastrado:</string>
    <string name="title_activity_selecionar_endereco"> Selecionar Endereço</string>
    <string name="back"> Voltar</string>
    <string name="id_pedido"> Id do Pedido: </string>
    <string name="status_pedido"> Status do Pedido:</string>
    <string name="title_activity_acompanhar_pedido"> Acompanhe seu Pedido! </string>
    <string name="descricao">Descrição</string>
    <string name="nome_do_produto">Nome do produto</string>
    <string name="quantidade_itens">Quant.</string>
    <string name="total_a_pagar">Total:</string>
    <string name="lista_pedido">Pedido</string>
    <string name="conf_pedido">Pedido: </string>
    <string name="conf_pedido_id"> 169 </string>
    <string name="valor_total"> Valor total do pedido: </string>
    <string name="valor_conf"> 25,99 </string>
    <string name="button_conf"> Confirmar Pedido </string>
    <string name="text_conf_pagar"> Valor do Pagamento: </string>
    <string name="confirm_pedido"> Confirmar Pedido </string>
    <string name="title_activity_confirmar_pedido"> Confirmar Pedido</string>
    <string name="atualizar">Refresh</string>
    <string name="add_email">Adicionar email</string>
    <string name="cancel_email">Cancelar email</string>
    <string name="text_view_cadatrar_email">Digite seu email: </string>
    <string name="button_cadastrar_email">Cadastrar </string>
    <string name="title_activity_maps">Map</string>
</resources>
