<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_confirmar_pedido"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.xofome.xofome.activities.ConfirmarPedidoActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarConfimarPedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:buttonGravity="top|bottom"
        android:minHeight="64dp"
        android:elevation="0dp">

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/conf_pedido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewIdConfirmarPedido"
            android:layout_weight="1" />

        <TextView
            android:text="@string/conf_pedido_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewIdPedido"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/valor_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewValorTotal"
            android:layout_weight="1" />

        <TextView
            android:text="@string/valor_conf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewValorConfirma"
            android:layout_weight="0.5"
            android:layout_marginLeft="48dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/text_conf_pagar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2ConfPagar"
            android:layout_weight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/editTextConfPagar"
            android:layout_weight="1" />

    </LinearLayout>

    <Button
        android:text="@string/button_conf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button2Conf"
        android:onClick="confirmar" />

</LinearLayout>
