<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_cadastrar_endereco"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.xofome.xofome.activities.CadastrarEnderecoActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:weightSum="1">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarCadastrarEndereco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:buttonGravity="top|bottom"
        android:minHeight="64dp"
        android:elevation="0dp">
    </android.support.v7.widget.Toolbar>

    <TextView
        android:text="@string/header_cadastrar_endereco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewDadosEndereço"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/black"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/rua"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewRua"
            android:paddingLeft="24dp"
            android:layout_weight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="Name"
            android:ems="10"
            android:id="@+id/editTextRua"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/bairro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewBairro"
            android:layout_weight="1"
            android:paddingLeft="24dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="Name"
            android:ems="10"
            android:id="@+id/editTextBairro"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/numero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewNumero"
            android:layout_weight="1"
            android:paddingLeft="24dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextNumero"
            android:layout_weight="1" />

    </LinearLayout>

    <TextView
        android:text="@string/complemento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewComplemento"
        android:paddingLeft="24dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editTextMultAreaComplemento" />

    <TextView
        android:text="@string/ponto_ref"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewPntRef"
        android:paddingLeft="24dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/multiAreaPontoRef"
        android:layout_weight="0.18" />


</LinearLayout>
