<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:cardview="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/card_viewbkcp"
        android:layout_width="118dp"
        android:layout_height="162dp"
        android:layout_gravity="center"
        android:padding="12dp"
        android:paddingBottom="12dp"
        android:paddingEnd="12dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingStart="12dp"
        android:paddingTop="12dp"
        android:visibility="visible"
        app:cardCornerRadius="18dp"
        app:cardElevation="10dp"
        cardview:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageProdutobkcp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/imagem_produto"
                android:paddingBottom="12dp"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:paddingTop="12dp"
                android:visibility="visible"
                app:srcCompat="@drawable/mini" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:orientation="horizontal"
                android:paddingBottom="6dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/info_textbkcp"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:paddingLeft="6dp"
                        android:paddingRight="6dp"
                        android:text="@string/test"
                        android:textSize="10sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textDescriptionPricebkcp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="6dp"
                            android:paddingRight="6dp"
                            android:text="@string/descriptionPrice"
                            android:textAlignment="center"
                            android:textColor="@android:color/holo_green_dark"
                            android:textSize="10sp" />

                        <TextView
                            android:id="@+id/textViewPricebkcp"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingLeft="6dp"
                            android:paddingRight="6dp"
                            android:text="@string/price"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
                            android:textColor="@android:color/holo_green_dark"
                            android:visibility="visible"
                            android:textSize="10sp" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="118dp"
                android:layout_height="30dp"
                android:baselineAligned="true"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageButton2bkcp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="2dp"
                    android:adjustViewBounds="true"
                    android:background="@null"
                    android:contentDescription="@string/imagem_button_pedido"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@mipmap/ic_add_shopping_cart_black_48dp" />

                <ImageButton
                    android:id="@+id/imageButtonbkcp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="2dp"
                    android:adjustViewBounds="true"
                    android:background="@null"
                    android:contentDescription="@string/imagem_menu_produto"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@mipmap/ic_more_vert_black_48dp" />
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>