<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:cardview="http://schemas.android.com/tools">


    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:padding="12dp"
        android:paddingBottom="12dp"
        android:paddingEnd="12dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingStart="12dp"
        android:paddingTop="12dp"
        android:visibility="visible"
        app:cardCornerRadius="18dp"
        app:cardElevation="10dp"
        cardview:cardUseCompatPadding="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_height="140dp"
        android:layout_marginBottom="8dp">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageProduto"
                android:layout_height="240dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/imagem_produto"
                android:paddingBottom="2dp"
                android:paddingLeft="2dp"
                android:paddingRight="0dp"
                android:paddingTop="2dp"
                android:visibility="visible"
                android:cropToPadding="false"
                android:paddingEnd="0dp"
                android:paddingStart="2dp"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_width="180dp" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="wrap_content"
                android:adjustViewBounds="true"
                android:background="@null"
                android:contentDescription="@string/imagem_button_pedido"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:scaleType="fitCenter"
                app:srcCompat="@mipmap/ic_add_shopping_cart_black_48dp"
                android:paddingBottom="1dp"
                android:layout_alignBottom="@+id/imageProduto"
                android:layout_toRightOf="@+id/imageProduto"
                android:layout_toEndOf="@+id/imageProduto"
                android:layout_marginLeft="52dp"
                android:layout_marginStart="52dp"
                android:layout_height="40dp" />

            <TextView
                android:id="@+id/info_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/test"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:textSize="12sp"
                android:paddingBottom="2dp"
                android:paddingTop="2dp"
                android:textStyle="normal|bold"
                android:textAllCaps="true"
                android:layout_alignTop="@+id/imageProduto"
                android:layout_toRightOf="@+id/imageProduto"
                android:layout_toEndOf="@+id/imageProduto"
                android:layout_marginLeft="19dp"
                android:layout_marginStart="19dp" />

            <TextView
                android:id="@+id/textDescriptionPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:text="@string/descriptionPrice"
                android:textAlignment="center"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="16sp"
                android:textStyle="normal|italic"
                android:paddingBottom="2dp"
                android:paddingTop="0dp"
                android:layout_centerVertical="true"
                android:layout_alignLeft="@+id/info_text"
                android:layout_alignStart="@+id/info_text" />

            <TextView
                android:id="@+id/textViewPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/price"
                android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
                android:textColor="@android:color/holo_green_dark"
                android:visibility="visible"
                android:textSize="13sp"
                android:textStyle="normal|italic"
                android:layout_alignBaseline="@+id/textDescriptionPrice"
                android:layout_alignBottom="@+id/textDescriptionPrice"
                android:layout_toRightOf="@+id/textDescriptionPrice"
                android:layout_toEndOf="@+id/textDescriptionPrice"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp" />


        </RelativeLayout>

    </android.support.v7.widget.CardView>


</RelativeLayout>