<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_lista_pedido"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.xofome.xofome.ListaPedidoActivity"
    tools:showIn="@layout/activity_lista_pedido">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/nome_do_produto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nomeProdutoText"
                android:layout_weight="1"
                android:textStyle="normal|bold"
                android:textSize="20sp" />

            <TextView
                android:text="@string/quantidade_itens"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/quantidadeText"
                android:layout_weight="0"
                android:textSize="20sp"
                android:textStyle="normal|bold" />

        </LinearLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="366dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/listaItemsPedido"
            android:focusable="false" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/total_a_pagar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/totalPagarText"
                android:layout_weight="0.04"
                android:textSize="20sp"
                android:textStyle="normal|bold"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/totalText"
                android:layout_weight="0.63"
                android:textSize="20sp"
                android:layout_marginTop="10dp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
